# pure_ws

./: README.md  使用说明
Demo/map1/rrt/: rrt_summary.json
Demo/map1/rrt_plus/: rrt_summary.json
Demo/map4/rrt/: rrt_summary.json
Demo/map4/rrt_plus/: rrt_summary.json
Demo/map5/rrt/: rrt_summary.json
Demo/map5/rrt_plus/: rrt_summary.json
Demo/map6/rrt/: room6_rrt.mkv  rrt_summary.json
Demo/map6/rrt_plus/: rrt_summary.json
docker/: Dockerfile.vnc  entrypoint.sh  start_exploration.sh
src/gazebo_modele/: package.xml  setup.cfg  setup.py
src/gazebo_modele/launch/: gazebo.launch.py
src/gazebo_modele/urdf/: model.urdf
src/gazebo_modele/world/: 2d.world  3d.world  room_1.world  room_2.world  room_3.world  room_4.world  room_5.world  room_6.world
src/nav_slam/: package.xml  setup.py
src/nav_slam/config/: rviz.rviz
src/nav_slam/launch/: 2dpoints.launch.py  2dpoints_plus.launch.py
src/nav_slam/nav_slam/: astar.py  map_pub.py  odom_map_tf.py  points_pub_map.py  rrt_astar_dwa.py  rrt_plus_astar_dwa.py  start_nav_dwa.py
