<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gazebo_modele</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="clb@ujssa.com">boxing</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>joint_state_publisher</depend>
  <depend>gazebo_ros_pkgs</depend>
  <depend>gazebo</depend>
  <depend>gazebo_ros</depend>
  <depend>nav2_bringup</depend>

  <export>
    <build_type>ament_python</build_type>
    <ament_index_resource>
      <resource>launch</resource>
    </ament_index_resource>
  </export>
</package>
